--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="btn-group">
-                            <a href="#" class="btn">Hire</a>
+                            <a href="" class="btn hire">Hire</a>
                             <a href="#contact" class="btn">Contact</a>
                         </div>
                     </div>
