--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
             href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
         />
         <script defer src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
+        <script defer src="script.js"></script>
     </head>
     <body>
         <div class="cursor"></div>
         <header class="header hidden fade-down" id="header">
-            <a href="#" class="logo hover-item">Gursimran <span>Singh</span></a>
+            <a href="#homelink" class="logo hover-item">Gursimran <span>Singh</span></a>
             <div class="nav-container">
                 <nav class="navbar small">
                     <a href="#homelink" class="active">Home</a>
@@ -94,69 +95,32 @@
             </div>
         </section>
 
-        <section class="education hidden fade-up" id="education">
-            <h2 class="heading hover-item">Education</h2>
+        <section class="education" id="education">
+            <h2 class="heading hover-item hidden fade-up">Education</h2>
 
-            <div class="timeline-items">
+            <div class="timeline-items hidden fade-up">
                 <div class="timeline-item hidden fade-right">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2021</div>
-                    <div class="timeline-content">
-                        <h3>Secondary School</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Dolor unde quae error ipsum, quasi saepe
-                            aspernatur incidunt obcaecati quos ipsa dolores
-                            delectus iusto neque. Quibusdam quod debitis
-                            deleniti eveniet nam?
-                        </p>
-                    </div>
-                </div>
-
-                <div class="timeline-item hidden fade-left">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-date">2023</div>
+                    <div class="timeline-date">2021 - 2023</div>
                     <div class="timeline-content">
                         <h3>High School</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Dolor unde quae error ipsum, quasi saepe
-                            aspernatur incidunt obcaecati quos ipsa dolores
-                            delectus iusto neque. Quibusdam quod debitis
-                            deleniti eveniet nam?
-                        </p>
-                    </div>
-                </div>
-
-                <div class="timeline-item hidden fade-right">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-date">2023</div>
-                    <div class="timeline-content">
-                        <h3>University</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Dolor unde quae error ipsum, quasi saepe
-                            aspernatur incidunt obcaecati quos ipsa dolores
-                            delectus iusto neque. Quibusdam quod debitis
-                            deleniti eveniet nam?
+                            I graduated from Scholars Public School, Rajpura,  where I excelled in science and mathematics. My high school years laid a strong foundation in problem-solving and analytical skills, which have been pivotal in my academic journey.
                         </p>
                     </div>
                 </div>
 
                 <div class="timeline-item hidden fade-left">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2024</div>
+                    <div class="timeline-date">2023 - Present</div>
                     <div class="timeline-content">
-                        <h3>Internship</h3>
+                        <h3>University</h3>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Dolor unde quae error ipsum, quasi saepe
-                            aspernatur incidunt obcaecati quos ipsa dolores
-                            delectus iusto neque. Quibusdam quod debitis
-                            deleniti eveniet nam?
+                            I am currently pursuing a BCA at Chitkara University, Rajpura. I've gained proficiency in C, C++, Python, and C#, strengthening my skills in web development and software engineering. Next up, I’m setting my sights on mastering React and Next.js while also diving deeper into DevOps and cloud services.
                         </p>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -382,6 +346,5 @@
                 &copy; Gursimran Singh | All Rights Reserved
             </ul>
         </footer>
-        <script src="script.js"></script>
     </body>
 </html>
