--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 target="_blank"
                                 ><i class="bx bxl-instagram-alt"></i>
                             </a>
-                            <a href="#" target="_blank"
+                            <a href="https://x.com/GursimrxnSingh" target="_blank"
                                 ><i class="bx bxl-twitter"></i
                             ></a>
                             <a href="https://www.leetcode.com/Gursimrxn" target="_blank">
@@ -316,7 +316,7 @@
                     target="_blank"
                     ><i class="bx bxl-instagram-alt"></i>
                 </a>
-                <a href="#" target="_blank"><i class="bx bxl-twitter"></i></a>
+                <a href="https://x.com/GursimrxnSingh" target="_blank"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.leetcode.com/Gursimrxn" target="_blank">
                     <i class='bx bx-code-alt'></i>
                 </a>
