--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <section class="contact hidden fade-up" id="contact">
             <h2 class="heading">Contact <span>Me</span></h2>
 
-            <form action="">
+            <form action="https://formspree.io/f/xzzpdveb" method="post">
                 <div class="input-group">
                     <div class="input-box">
                         <input type="text" placeholder="Full Name" />
