--- a/index.html
+++ b/index.html
@@ -278,17 +278,17 @@
             <form action="https://formspree.io/f/xzzpdveb" method="post">
                 <div class="input-group">
                     <div class="input-box">
-                        <input type="text" placeholder="Full Name" />
-                        <input type="email" placeholder="Email" />
+                        <input type="text" name ="Name" placeholder="Full Name" />
+                        <input type="email" name="email" placeholder="Email" />
                     </div>
                     <div class="input-box">
-                        <input type="number" placeholder="Phone Number" />
-                        <input type="text" placeholder="Subject" />
+                        <input type="number" name="phno" placeholder="Phone Number" />
+                        <input type="text" name="subject" placeholder="Subject" />
                     </div>
                 </div>
                 <div class="input-group-2">
                     <textarea
-                        name=""
+                        name="message"
                         id=""
                         placeholder="Your Message"
                         rows="11"
