--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
         <section class="contact hidden fade-up" id="contact">
             <h2 class="heading">Contact <span>Me</span></h2>
 
-            <form action="https://formspree.io/f/xzzpdveb" method="post">
+            <form action="https://getform.io/f/blljqwvb" method="post">
                 <div class="input-group">
                     <div class="input-box">
-                        <input type="text" name ="Name" placeholder="Full Name" />
-                        <input type="email" name="email" placeholder="Email" />
+                        <input type="text" required name="Name" placeholder="Full Name" />
+                        <input type="email" required name="email" placeholder="Email" />
                     </div>
                     <div class="input-box">
                         <input type="number" name="phno" placeholder="Phone Number" />
@@ -292,6 +292,7 @@
                         id=""
                         placeholder="Your Message"
                         rows="11"
+                        required
                     ></textarea>
                     <input
                         type="submit"
