fixed glitchy scrolling issue

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
             </form>
         </section>
-        <footer class="footer hidden fade-up">
+        <footer class="footer">
             <div class="socials small">
                 <a
                     href="https://www.linkedin.com/in/gursimrxnsingh"
