--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             rel="stylesheet"
             href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
         />
+        <script defer src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script> 
         <script defer src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
         <script defer src="script.js"></script>
     </head>
